--- a/ex1.html
+++ b/ex1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <img src="ladda.jpg" alt="hello"height="50%" width="50%">
-	<center><p>Detta är min första hemsida</p></center>
+	<center><p><b>Detta är min första hemsida</b></p></center>
 </body>
 </html>
 //hugo
