--- a/ex1.html
+++ b/ex1.html
@@ -5,7 +5,8 @@
 	<title>Min hemsida</title>
 </head>
 <body>
-<img src="ladda.jpg" alt="hello"height="50%" width="50%">
+	<font face="Times new roman"></font>
+	<img src="ladda.jpg" alt="hello"height="50%" width="50%">
 	<center><p>Detta är min första hemsida</p></center>
 </body>
 </html>
