--- a/root/index.html
+++ b/root/index.html
@@ -13,7 +13,7 @@ div {
 	<title>Min hemsida</title>
 </head>
 <body>
-	<a href="htmlnothomepage/aboutus">
+	<a href="sub_folder/aboutus">
 <img src="ladda.jpg" alt="hello"height="50%" width="50%">
 	<center><p><b>Detta är min första hemsida</b></p></center>
     
