--- a/root/index.html
+++ b/root/index.html
@@ -15,7 +15,7 @@ div {
 <body>
 	<a href="sub_folder/aboutus">
 <img src="ladda.jpg" alt="hello"height="50%" width="50%">
-	<center><p><b>Detta är min första hemsida</b></p></center>
+	<center><p><strong>Detta är min första hemsida</strong></p></center>
     
     <div></div>
     
