--- a/root/sub_folder/aboutus.html
+++ b/root/sub_folder/aboutus.html
@@ -1,13 +1,14 @@
 
- <!DOCTYPE html>
-<html>
+ <!DOCTYPE Html>
+<Html lang="sv">
 <head>
-<title>Page Title</title>
+    <meta name="description" content="Welcome to the Unofficial SSIS Website! This directive contains information about us, the creators of the website!">
+    <meta name="keywords" content="About us, about, us, unofficial, ssis">
+    <title>USSIS - About us</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <img src="../pictures/albert.jpg" width="400" length="400">
+    <img src="../pictures/axel.jpg" width="400" length="400">
+    <img src="../pictures/hugo.jpg" width="400" length="400">
 </body>
-</html> 
+</Html>
