--- a/root/sub_folder/aboutus.html
+++ b/root/sub_folder/aboutus.html
@@ -1,5 +1,4 @@
-
- <!DOCTYPE Html>
+<!DOCTYPE Html>
 <Html lang="sv">
 <head>
     <meta name="description" content="Welcome to the Unofficial SSIS Website! This directive contains information about us, the creators of the website!">
@@ -10,5 +9,6 @@
     <img src="../pictures/albert.jpg" width="400" length="400">
     <img src="../pictures/axel.jpg" width="400" length="400">
     <img src="../pictures/hugo.jpg" width="400" length="400">
+    <center><a href="../index.html">Go back to the main website</a></center>
 </body>
 </Html>
