i made a link to the about us page

--- a/root/index.html
+++ b/root/index.html
@@ -4,6 +4,6 @@
 <title>unofficial_ssis</title>
 </head>
 <body>
-<a href="/sub_folder/aboutus"> about us </a>
+<a href=" sub_folder/aboutus.html"><p>hello </p> </a>
 </body>
 </html>
