--- a/root/sub_folder/aboutus.html
+++ b/root/sub_folder/aboutus.html
@@ -9,6 +9,6 @@
     <img src="../pictures/albert.jpg" width="400" length="400">
     <img src="../pictures/axel.jpg" width="400" length="400">
     <img src="../pictures/hugo.jpg" width="400" length="400">
-    <a style="text-alaign:center"href="../index.html">Go back to the main website</a>
+    <a style="text-align:center"href="../index.html">Go back to the main website</a>
 </body>
 </Html>
