jag har satt alt i mitten med css

--- a/root/sub_folder/aboutus.html
+++ b/root/sub_folder/aboutus.html
@@ -9,7 +9,12 @@
     <img src="../pictures/albert.jpg" width="400" length="400">
     <img src="../pictures/axel.jpg" width="400" length="400">
     <img src="../pictures/hugo.jpg" width="400" length="400">
-    <h2>albert                                           alex                                                                        hugo</h2
-    <a style="text-align:center"href="../index.html">Go back to the main website</a>
+	
+	<h1 style="text-align:center"> albert alex hugo </h1>
+	
+    <a href="../index.html ">
+	<h2 style="text-align:center">Go back to the main website </h2>
+	</a>
+	
 </body>
 </Html>
