--- a/root/index.html
+++ b/root/index.html
@@ -4,6 +4,10 @@
 <title>unofficial_ssis</title>
 </head>
 <body>
-<a href=" sub_folder/aboutus.html"><p>hello </p> </a>
+
+<a href=" sub_folder/aboutus.html">
+<h2 style="text-align:right"> about us </h2> 
+</a>
+
 </body>
 </html>
