--- a/root/index.html
+++ b/root/index.html
@@ -1,12 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="se">
 <head>
+
+<style>
+body  {
+    background-image: url("pictures/goku.gif");
+    background-color: #cccccc;
+}
+</style>
 <title>unofficial_ssis</title>
 </head>
+
 <body>
 
 <a href=" sub_folder/aboutus.html">
-<h2 style="text-align:right"> about us </h2> 
+<h1 style="text-align:right"> about us </h1> 
 </a>
 
 </body>
