--- a/root/sub_folder/aboutus.html
+++ b/root/sub_folder/aboutus.html
@@ -1,6 +1,12 @@
 <!DOCTYPE Html>
 <Html lang="sv">
 <head>
+	<style>
+body  {
+    background-image: url("../pictures/fireworks.gif");
+    background-color: #cccccc;
+}
+</style>
     <meta name="description" content="Welcome to the Unofficial SSIS Website! This directive contains information about us, the creators of the website!">
     <meta name="keywords" content="About us, about, us, unofficial, ssis">
     <title>USSIS - About us</title>
