--- a/root/sub_folder/aboutus.html
+++ b/root/sub_folder/aboutus.html
@@ -4,8 +4,8 @@
 	<style>
 body  {
     background-image: url("../pictures/fireworks.gif");
-    background-color: #cccccc;
-}
+    background-color: #cccccc; }
+		h1{color:blue;}
 </style>
     <meta name="description" content="Welcome to the Unofficial SSIS Website! This directive contains information about us, the creators of the website!">
     <meta name="keywords" content="About us, about, us, unofficial, ssis">
@@ -19,7 +19,7 @@ body  {
 	<h1 style="text-align:center"> albert alex hugo </h1>
 	
     <a href="../index.html ">
-	<h2 style="text-align:center">Go back to the main website </h2>
+	<h2 style="text-align:center;">Go back to the main website </h2>
 	</a>
 	
 </body>
