--- a/root/index.html
+++ b/root/index.html
@@ -15,7 +15,7 @@ body  {
 <body>
 
 <a href=" sub_folder/aboutus.html">
-<h1 style="text-align:right"> about us </h1> 
+<h1 style="text-align:right;"> about us </h1> 
 </a>
 
 </body>
