--- a/root/index.html
+++ b/root/index.html
@@ -17,6 +17,8 @@ body  {
 <a href=" sub_folder/aboutus.html">
 <h1 style="text-align:right;"> about us </h1> 
 </a>
+    <a href=" https://calendar.google.com/calendar/embed?src=stockholmscience.se_3133363436323537343935@resource.calendar.google.com&ctz=Europe/Stockholm&mode=WEEK">
+<h1 style="text-align:center;">18a schedule</h1></a>
 
 </body>
 </html>
