--- a/root/index.html
+++ b/root/index.html
@@ -19,6 +19,8 @@ body  {
 </a>
     <a href=" https://calendar.google.com/calendar/embed?src=stockholmscience.se_3133363436323537343935@resource.calendar.google.com&ctz=Europe/Stockholm&mode=WEEK">
 <h1 style="text-align:center;">18a schedule</h1></a>
+    <a href="https://calendar.google.com/calendar/embed?src=stockholmscience.se_3133353535373534343234@resource.calendar.google.com&ctz=Europe/Stockholm&mode=WEEK">
+<h1 style="text-align:center;">18b schedule</h1></a>
 
 </body>
 </html>
