--- a/root/sub_folder/aboutus.html
+++ b/root/sub_folder/aboutus.html
@@ -14,7 +14,7 @@ body  {
 <body>
     <img src="../pictures/albert.jpg" width="400" length="400">
     <img src="../pictures/axel.jpg" width="400" length="400">
-    <img src="../pictures/hugo.jpg" width="400" length="400">
+    <img src="../pictures/hugo.gif" width="400" length="400">
 	
 	<h1 style="text-align:center"> albert alex hugo </h1>
 	
