--- a/root/index.html
+++ b/root/index.html
@@ -6,6 +6,8 @@
 <style>
 body  {
     background-image: url("pictures/goku.gif");
+      background-repeat: no-repeat;
+    background-size: cover;
     background-color: #cccccc;
 }
 </style>
