--- a/root/sub_folder/aboutus.html
+++ b/root/sub_folder/aboutus.html
@@ -4,7 +4,11 @@
 	<style>
 body  {
     background-image: url("../pictures/fireworks.gif");
-    background-color: #cccccc; }
+background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #cccccc;
+	}
+		
 		h1{color:blue;}
 </style>
     <meta name="description" content="Welcome to the Unofficial SSIS Website! This directive contains information about us, the creators of the website!">
